Bug 28827 - SVGSVGElement.unsuspendRedraw() shouldn't throw
Summary: SVGSVGElement.unsuspendRedraw() shouldn't throw
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC OS X 10.5
: P2 Trivial
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-28 23:45 PDT by Cameron McCormack (:heycam)
Modified: 2009-08-31 04:06 PDT (History)
1 user (show)

See Also:


Attachments
Patch v1 (2.34 KB, patch)
2009-08-28 23:53 PDT, Cameron McCormack (:heycam)
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Cameron McCormack (:heycam) 2009-08-28 23:45:42 PDT
Erratum removes the exception on unsuspendRedraw():

http://www.w3.org/2003/01/REC-SVG11-20030114-errata#remove_exception_on_unsuspendredraw
Comment 1 Cameron McCormack (:heycam) 2009-08-28 23:53:30 PDT
Created attachment 38773 [details]
Patch v1

Remove the exception.  (The IDL was using "setter raises" erroneously, too.)
Comment 2 Eric Seidel (no email) 2009-08-31 03:18:39 PDT
Comment on attachment 38773 [details]
Patch v1

Please link to the errata in your ChangeLog in the future. :)  ChangeLogs are much quicker lookup than pulling up the bug.
Comment 3 Eric Seidel (no email) 2009-08-31 03:30:03 PDT
Comment on attachment 38773 [details]
Patch v1

Rejecting patch 38773 from commit-queue.  This patch will require manual commit.

['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1'] failed with exit code 1
Comment 4 Eric Seidel (no email) 2009-08-31 03:48:18 PDT
Comment on attachment 38773 [details]
Patch v1

Flakey Test:
Testing 11178 test cases.
media/video-source-add-src.html -> crashed
Comment 5 Eric Seidel (no email) 2009-08-31 04:01:26 PDT
(In reply to comment #4)
> (From update of attachment 38773 [details])
> Flakey Test:
> Testing 11178 test cases.
> media/video-source-add-src.html -> crashed

Logged as bug 28845.
Comment 6 Eric Seidel (no email) 2009-08-31 04:06:41 PDT
Comment on attachment 38773 [details]
Patch v1

Clearing flags on attachment: 38773

Committed r47890: <http://trac.webkit.org/changeset/47890>
Comment 7 Eric Seidel (no email) 2009-08-31 04:06:44 PDT
All reviewed patches have been landed.  Closing bug.