2009-08-31  Cameron McCormack  <cam@mcc.id.au>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=28827
        SVGSVGElement.unsuspendRedraw() shouldn't throw

        * svg/SVGSVGElement.cpp:
        (WebCore::SVGSVGElement::unsuspendRedraw):
        * svg/SVGSVGElement.h:
        * svg/SVGSVGElement.idl:


Canonical link: https://commits.webkit.org/39466@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47890 268f45cc-cd09-0410-ab3c-d52691b4dbfc