WebCore/svg/SVGSVGElement.cpp
@@ -313,9 +313,8 @@ unsigned long SVGSVGElement::suspendRedraw(unsigned long /* max_wait_millisecond
     return 0;
 }
 
-void SVGSVGElement::unsuspendRedraw(unsigned long /* suspend_handle_id */, ExceptionCode&)
+void SVGSVGElement::unsuspendRedraw(unsigned long /* suspend_handle_id */)
 {
-    // if suspend_handle_id is not found, throw exception
     // FIXME: Implement me (see bug 11275)
 }
 
