WebCore/svg/SVGSVGElement.h
@@ -95,7 +95,7 @@ namespace WebCore {
         void setCurrentTime(float seconds);
 
         unsigned long suspendRedraw(unsigned long max_wait_milliseconds);
-        void unsuspendRedraw(unsigned long suspend_handle_id, ExceptionCode&);
+        void unsuspendRedraw(unsigned long suspend_handle_id);
         void unsuspendRedrawAll();
         void forceRedraw();
 
